# data-engineering-project-structure

./: README.md  pyproject.toml
jobs/: save_cleaned_data.py
resources/inputs/: top_movie_genres.csv
scripts/: run-save-cleaned-data.sh  run-tests.sh
tests/: test_clean_columns.py
transformations/: clean_data.py
