[tool.poetry]
name = "data-engineering-project-structure"
version = "0.1.0"
description = "Dummy description"
authors = ["Dummiest Dummy <dummy@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
pyspark = "^3.2.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
